--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -54,7 +54,8 @@
 <div class="pps">
         <div class="pps-h">
             <div class="pps-s" style="width: 440px;">
-                <div class="fb-video" data-href="https://www.facebook.com/RareFrostbites/videos/808457726409849/" data-width="444" data-show-text="false"><blockquote cite="https://www.facebook.com/RareFrostbites/videos/808457726409849/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/RareFrostbites/videos/808457726409849/">Ya Ea - Texture Pack Trailer</a><p>Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure.
+                <div class="fb-video" data-href="https://www.facebook.com/RareFrostbites/videos/808457726409849/" data-width="444" data-show-text="false">
+                    <blockquote cite="https://www.facebook.com/RareFrostbites/videos/808457726409849/" class="fb-xfbml-parse-ignore" style="opacity: 0%;"><a href="https://www.facebook.com/RareFrostbites/videos/808457726409849/">Ya Ea - Texture Pack Trailer</a><p>Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure.
 
                     Get it now
                     RFB Store: https://rarefrostbites.github.io/store/Ya_Ea
@@ -78,7 +79,8 @@
                     
                     #RareFrostbites
                     #RareFrostbites_Texture_Packs
-                    #Ya_Ea</p>Nai-post ni <a href="https://www.facebook.com/RareFrostbites/">RareFrostbites Team</a> noong Huwebes, Pebrero 11, 2021</blockquote></div>
+                    #Ya_Ea</p>Nai-post ni <a href="https://www.facebook.com/RareFrostbites/">RareFrostbites Team</a> noong Huwebes, Pebrero 11, 2021</blockquote>
+                </div>
             </div>
         </div>
 </div>
