--- a/styles/store/com.rarefrostbites.10.ya_ea.css
+++ b/styles/store/com.rarefrostbites.10.ya_ea.css
@@ -35,7 +35,6 @@
 }
 
 .alert-cl .alert-cl-h .alert-cl-h-h {
-    display: none;
     margin: 3px;
     padding: 10px;
     width: 100%;
@@ -267,4 +266,134 @@
 .pps .pps-h .pps-s img {
     width: 320px;
     height: 180px;
+}
+
+
+.pi-b1 {
+    height: auto;
+    margin-right: auto;
+    margin-left: auto;
+    background-color: #000000;
+    border-radius: 5px;
+    border: 5px #000000 solid;
+}
+
+.pi-b1 .pi-b2 {
+    height: auto;
+    background-color: #ffffff;
+    border-radius: 4px;
+    border: 4px #ffffff solid;
+}
+
+.pi-b1 .pi-b2 .pi-b3 {
+    height: auto;
+    background-color: #c6c6c6;
+    border-radius: 3px;
+    border: 3px #c6c6c6 solid;
+}
+
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 {
+    height: auto;
+    padding: 5px;
+    background-color: #010101;
+    border: 3px #393939 solid;
+}
+
+@media only screen and (max-width: 640px) {
+    .pi-b1 {
+        width: 300px;
+    }
+}
+
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-d {
+    height: auto;
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-d h5 {
+    height: auto;
+}
+
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 hr {
+    height: 2px;
+    margin-top: 3.5px;
+    margin-bottom: 3.5px;
+    background-color: #405151;
+}
+
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m {
+    display: flex;
+    width: auto;
+    height: auto;
+    flex-direction: column;
+}
+
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .tag_i {
+    display: flex;
+    width: auto;
+    height: auto;
+    justify-content: flex-start;
+}
+
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .tag_i .tags h2 {
+    font-weight: lighter;
+}
+
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .tag_i .tags_i {
+    display: flex;
+    width: auto;
+    height: auto;
+    margin-bottom: 3px;
+    margin-left: 8px;
+    overflow-x: hidden;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    transform: translateY(3px);
+    vertical-align: top;
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .tag_i .tags_i .t {
+    height: 28px;
+    margin-right: 8px;
+    margin-bottom: 8px;
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .tag_i .tags_i .b1 {
+    background-color: #555555;
+    border: 5px #555555 solid;
+    border-radius: 8px;
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .tag_i .tags_i .b1 .b2 {
+    padding-left: 4px;
+    padding-right: 4px;
+    background-color: #212121;
+    border: 2.5px #212121 solid;
+    border-radius: 5px;
+}
+
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .genre_i {
+    display: flex;
+    width: auto;
+    height: auto;
+    justify-content: flex-start;
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .genre_i .genres h2 {
+    font-weight: lighter;
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .genre_i .genres_i {
+    display: flex;
+    width: auto;
+    height: auto;
+    margin-bottom: 3px;
+    margin-left: 8px;
+    overflow-x: hidden;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    transform: translateY(3px);
+    vertical-align: top;
+}
+.pi-b1 .pi-b2 .pi-b3 .pi-b4 .pi-m .genre_i .genres_i .t {
+    height: 28px;
+    margin-right: 8px;
+    margin-bottom: 8px;
+}
+
+.body {
+    background-color: #ffffff6e;
 }
